# Gaia

./: .gitignore  CONTRIBUTING.md  LICENSE  ProjectGaia_오픈소스_로드맵.md  README.md  pyproject.toml
benchmarks/: README.md  baselines.py  run_all.py  tasks.py
data/: README.md
data/configs/: emp.yaml  mgnify.yaml  neon.yaml
data/processed_real/: gaia-metadata-v1.csv  tokenizer.json
data/scripts/: collect_emp.py  collect_mgnify.py  collect_mgnify_parallel.py  collect_neon.py  validate_quality.py
docs/: data_standard.md  roadmap.md  training_log_2026-04-01.md  training_log_2026-04-01_finetune.md  training_log_2026-04-01_mgm.md  training_log_2026-04-02.md  training_log_2026-04-02_reconstruction.md  training_log_2026-04-02_yield.md  training_log_2026-04-03.md  training_log_2026-04-03_v3.md  training_log_2026-04-06_future.md  training_log_2026-04-08_bernburg.md
docs/paper/: gaia_paper.tex
gaia/: __init__.py
gaia/evaluation/: __init__.py  metrics.py
gaia/inference/: __init__.py  interpretability.py  predictor.py  synthetic.py
gaia/models/: __init__.py  transformer.py
gaia/preprocessing/: __init__.py  filtering.py  metadata.py  normalization.py  pipeline.py  taxonomy.py  tokenizer.py
gaia/training/: dataset.py  finetune.py  pretrain.py  trainer.py
scripts/: benchmark_expanded.py  benchmark_yield.py  finetune_ph.py  predict_future.py  retrain_twostep.py  retrain_v3.py
tests/: test_model.py  test_preprocessing.py
